# booksapi

./: .dockerignore  .env  .gitignore  .vercelignore  Dockerfile  README.md  books_info.csv  fly.toml  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  post.sh
docs/postman/: BooksML.collection.json  Local.environment.json  Remote.environment.json
http-requests/: requests.http
mockdata/: books.csv  books_test.csv  books_train.csv  importador.py  ml_request.csv  users.csv
src/: main.py  scrap_book_toscrape.py
src/Scrap/: Scrap.py  ScrapBook.py  ScrapMainPage.py
src/api/: app.py  models.py  security.py
src/data/: csvdatads.py  csvdatasrc.py  csvds.py  csvsrc.py  userds.py
src/data/model/: bookmodel.py  booktestmodel.py  booktrainmodel.py
src/data_scrape/Scrap/: ScrapBook.py  ScrapMainPage.py
src/data_scrape/cmd/: scrap_book_toscrape.py
src/fiap-ml/: main.py
src/model/: book.py
src/webapi/: main.py
src/webapi/api/: app.py  filters.py  models.py  security.py
